--- a/_focail/a-2.md
+++ b/_focail/a-2.md
@@ -4,7 +4,7 @@ cnuas: "Cnuasach Focal as Teileann"
 focal: de
 leagan: a
 rann: réamhfhocal
-béarla: of
+bearla: of
 údar: "Úna M. Uí Bheirn"
 ---
 
