--- a/_focail/a-3.md
+++ b/_focail/a-3.md
@@ -4,7 +4,7 @@ cnuas: "Cnuasach Focal as Teileann"
 focal: a
 leagan: a
 rann: mír choibhneasta
-béarla: of
+bearla: of
 údar: "Úna M. Uí Bheirn"
 ---
 
